// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero component handles no data 1`] = `null`;

exports[`Hero component renders a level 0 (carousel) Hero 1`] = `
<div
  class="Hero Hero--slim Hero--carousel"
>
  <div
    class="MuiContainer-root container MuiContainer-maxWidthXl"
  >
    <div
      class="wrapper"
    >
      <div
        class="wrapper"
      >
        <div
          class="Carousel Carousel--opacity Carousel--swipable"
        >
          <div
            style="overflow-x: hidden;"
          >
            <div
              class="react-swipeable-view-container"
              style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
            >
              <div
                aria-hidden="false"
                class="Carousel__slide--global"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  class="page"
                >
                  <div
                    class="slide"
                  >
                    <div
                      class="content"
                    >
                      <h1
                        class="MuiTypography-root title Typography Typography--underline MuiTypography-h1"
                      >
                        Lorem ipsum
                      </h1>
                      <div
                        class="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="SlideControls SlideControls--light controls"
      >
        <span
          class="middle-container"
        >
          <span
            class="sliding-slot"
          >
            <span
              class="numbers"
            >
              <span
                class="number number--active"
              >
                01
              </span>
            </span>
          </span>
          <span
            class="total"
          >
            02
          </span>
        </span>
        <button
          aria-label="next"
          class="MuiButtonBase-root MuiIconButton-root IconButton IconButton--medium IconButton--text IconButton--dark-background"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root chevron"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="children"
      >
        <div
          class="InputGroup InputGroup--locked-xs"
        >
          <div
            class="MuiFormControl-root MuiTextField-root TextField input"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-filled"
              data-shrink="false"
            >
              Search
            </label>
            <div
              class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiFilledInput-input"
                type="text"
                value=""
              />
            </div>
          </div>
          <button
            aria-label="Search"
            class="MuiButtonBase-root MuiIconButton-root IconButton IconButton--medium IconButton--contained button"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="image-carousel"
  >
    <div
      class="wrapper"
    >
      <div
        class="Carousel Carousel--swipable"
      >
        <div
          style="overflow-x: hidden;"
        >
          <div
            class="react-swipeable-view-container"
            style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
          >
            <div
              aria-hidden="false"
              class="Carousel__slide--global"
              data-swipeable="true"
              style="width: 100%; flex-shrink: 0; overflow: auto;"
            >
              <div
                class="page"
              >
                <div
                  class="slide"
                >
                  <div
                    class="image"
                    style="background-image: url(undefined);"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero component renders a level 2 Hero 1`] = `
<div
  class="Hero Hero--slim"
>
  <div
    class="MuiContainer-root container MuiContainer-maxWidthXl"
  >
    <div
      class="wrapper"
    >
      <div
        class="content"
      >
        <h1
          class="MuiTypography-root title Typography Typography--underline MuiTypography-h1"
        >
          Lorem ipsum
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero component renders correctly 1`] = `
<div
  class="Hero"
>
  <div
    class="MuiContainer-root container MuiContainer-maxWidthXl"
  >
    <div
      class="wrapper"
    >
      <div
        class="content"
      >
        <h1
          class="MuiTypography-root title Typography Typography--underline MuiTypography-h1"
        >
          Lorem ipsum
        </h1>
        <div
          class="text"
        >
          Lorem ipsum sit dolor amet
        </div>
      </div>
    </div>
  </div>
  <div
    class="image"
    style="background-image: url(path-to-image);"
  />
</div>
`;
